AnnotationFileElementTypes: fix JDK 8 compile error in encodeJarEntryPath
URLEncoder.encode(String, Charset) is a Java 10+ overload; this project
targets Java 8. Use the String-based encode(String, String) overload
instead, wrapping its checked UnsupportedEncodingException the same way
CheckerMain.getJarPathOfClass already does for the analogous
URLDecoder.decode call: UTF-8 is guaranteed to be supported by every JVM,
so the exception can only mean a broken VM.

Verified with ORG_GRADLE_PROJECT_useJdkVersion=8 (:framework:compileJava,
:checker:compileJava, and both modules' test sources all build clean) and
by rerunning the binary-stub JUnit suite, which exercises this method
through real jar-entry paths.